# project2_Gubarev_Stepan_m25563

./: .gitignore  .gitingore  README.md  pyproject.toml
src/: main.py
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
