[tool.poetry]
name = "project2-gubarev-stepan-m25563"
version = "0.1.0"
description = "db task"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=1.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

